Minor modification to package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cordova-phaser",
   "version": "1.0.1",
-  "description": "A reference for creating cordova-phaser app templates.",
+  "description": "A cordova-cli template for phaser games, Aimed to Android deployment.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
